foi adicionado algumas coisas

--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -9,6 +9,17 @@
   <link rel="stylesheet" href="../paginas/css/egipcia.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    <style>
+      div{
+        border: 1px solid black;
+      }
+
+      body{
+        padding: 0;
+      }
+
+    </style>
 </head>
 
 <body>
@@ -16,95 +27,21 @@
     <header>
 
     </header>
-    
-    <div>
-      <p>1 of 3</p>
-    </div>
-    <main>
-            <h1>MITOLOGIA EGÍPCIA</h1>
-            <p> A mitologia egípcia apresenta uma impressionante panóplia de divindades. Por exemplo, Ra, o deus sol, era
-              uma figura central. Acreditava-se que ele cruzava o céu durante o dia em sua barca solar e viajava pelo
-              submundo à noite. Esse ciclo diurno e noturno refletia a renovação constante da vida.
-  
-              Ísis, a deusa da maternidade e magia, era conhecida por sua devoção a Osíris e seu papel na ressurreição
-              dele após a morte. Ísis também era considerada a protetora das crianças e das mulheres grávidas,
-              simbolizando a maternidade e o renascimento.
-  
-              Osíris, o deus da morte e ressurreição, era responsável por julgar as almas dos mortos no submundo. Sua
-              história de assassinato e ressurreição simbolizava a crença egípcia na vida após a morte e na necessidade de
-              preparação para essa jornada.
-  
-              Hórus, o deus dos céus e dos faraós, era frequentemente representado como um falcão e simbolizava a realeza.
-              Os faraós eram considerados encarnações de Hórus durante suas vidas e de Osíris após a morte.</p>
-  
-  
-            <p>A criação do mundo, segundo a mitologia egípcia, estava associada a Atum, o deus primordial. Ele emergiu do
-              Nada e criou o primeiro par divino, Shu e Tefnut, representando o ar e a umidade.
-  
-              O ciclo diário do sol era personificado na lenda de Rá (ou Ra), que navegava pelo céu durante o dia e
-              enfrentava desafios no submundo à noite. Esse mito explicava tanto o ciclo do dia e da noite quanto a
-              passagem da vida para a morte.
-  
-              Os mitos egípcios também apresentam histórias de deuses e heróis enfrentando desafios, como a lenda de Hórus
-              e Seth, que disputaram o trono do Egito, simbolizando a luta entre a ordem e o caos.</p>
-  
-            <p>A mumificação era um ritual crucial na mitologia egípcia. Acreditava-se que a preservação do corpo era
-              essencial para garantir a sobrevivência da alma na vida após a morte. Os sacerdotes realizavam rituais
-              complexos durante o processo de mumificação, que incluía a remoção de órgãos internos e a embalsamação do
-              corpo.
-  
-              Os egípcios acreditavam que, após a morte, a alma passava por um julgamento no submundo, onde suas ações na
-              vida eram avaliadas. Se a alma fosse considerada justa, ela teria acesso ao paraíso eterno. Caso contrário,
-              enfrentaria punições no submundo.
-  
-              O Livro dos Mortos, uma coleção de textos funerários, desempenhava um papel fundamental nesse processo,
-              fornecendo instruções e encantamentos para ajudar os mortos em sua jornada após a morte.
-  
-            </p>
-  
-            <p>Os faraós eram considerados divinos e governavam como intermediários entre os deuses e o povo egípcio. Eles
-              tinham a responsabilidade de manter a ordem cósmica (maat) na sociedade egípcia, garantindo a estabilidade e
-              a prosperidade.
-  
-              A construção de monumentos e templos era uma parte importante do papel dos faraós na promoção da religião e
-              da cultura egípcia. Por exemplo, o faraó Ramsés II deixou um legado duradouro com a construção de monumentos
-              como Abu Simbel e o Templo de Karnak.
-  
-            </p>
-  
-            <p>A escrita hieroglífica egípcia era uma forma complexa de comunicação que usava símbolos pictográficos e
-              ideogramas. Ela era usada para inscrições em monumentos, tumbas e papiros. A decifração dos hieróglifos foi
-              um marco significativo na compreensão da mitologia egípcia.
-  
-              A pedra de Roseta, que continha inscrições em três scripts diferentes (hieróglifos, demótico e grego), foi
-              fundamental para a decifração dos hieróglifos pelos linguistas modernos.</p>
-  
-            <p>Uma das histórias mais conhecidas da mitologia egípcia é a lenda de Ísis e Osíris. Osíris, o deus da morte,
-              foi assassinado por seu irmão Seth, o deus do caos, mas foi ressuscitado por Ísis. Essa história enfatiza
-              temas de morte, ressurreição e renascimento.
-  
-              Outro mito popular é a jornada do sol pelo submundo durante a noite, onde enfrenta desafios antes de
-              renascer pela manhã. Essa jornada reflete a crença na continuidade da vida após a morte.</p>
-  
-            <p>Os símbolos eram uma parte integral da mitologia egípcia. O Ankh, um símbolo em forma de cruz com uma alça
-              oval, representava a vida eterna. O Olho de Hórus, muitas vezes usado como amuleto, simbolizava proteção e
-              poder divino.
-  
-              A Esfinge, com corpo de leão e cabeça humana, guardava as pirâmides e representava a sabedoria e os
-              mistérios da vida após a morte.
-  
-              Esses são apenas alguns dos aspectos fascinantes da mitologia egípcia, que se entrelaçam em uma tapeçaria
-              rica de crenças, rituais e histórias que definiram a civilização egípcia ao longo de milênios. Cada elemento
-              da mitologia egípcia contribui para a compreensão da visão de mundo e dos valores dos antigos egípcios. Se
-              você quiser saber mais sobre um tópico específico ou se precisar de informações adicionais, sinta-se à
-              vontade para perguntar.</p>
-  
-    </main>
-  
-    <div>
-      sla of oq
-     </div>
-  </div>
+
+
+      <div class="row">
+        <div class="col">
+          1 of 3
+        </div>
+        <div class="col-6">
+          2 of 3 (wider)
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
+      </div>
+      </div>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
