foi adicionado "conteúdo"

--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -4,43 +4,132 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Site SEPE</title>
   <link rel="stylesheet" href="../paginas/css/style.css">
   <link rel="stylesheet" href="../paginas/css/egipcia.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
-    <style>
-      div{
-        border: 1px solid black;
-      }
-
-      body{
-        padding: 0;
-      }
-
-    </style>
+  <title>Egipcia | SEPE</title>
 </head>
 
 <body>
-
-    <header>
-
-    </header>
-
-
-      <div class="row">
-        <div class="col">
-          1 of 3
-        </div>
-        <div class="col-6">
-          2 of 3 (wider)
-        </div>
-        <div class="col">
-          3 of 3
-        </div>
-      </div>
-      </div>
+  <header>
+    <h1>EGÍPCIA</h1>
+  </header>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col-6">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem cum iusto, sed nulla, omnis totam quia non
+      corporis commodi veniam culpa sint voluptate nemo ad ipsam! Quae minima assumenda fugit.
+      Veniam nam autem iusto cumque corrupti, culpa reprehenderit suscipit doloremque eveniet fugiat vitae numquam? Qui
+      perspiciatis quam repudiandae nam porro! Deleniti, asperiores doloremque. Quasi totam blanditiis dolorum, maiores
+      pariatur amet.
+      Quia optio ipsa rerum maiores, aliquam numquam perspiciatis hic alias dicta quo nihil nulla, sequi autem! Dolores
+      dolorum at illum reiciendis et minus inventore, cumque, eius quo est voluptatum libero?
+      Sapiente, sunt voluptatum temporibus dicta nulla minus labore voluptate quaerat deleniti necessitatibus possimus,
+      assumenda exercitationem repudiandae accusamus et ipsum velit perferendis cupiditate? Voluptate dicta, at nihil
+      inventore ipsum repellendus placeat?
+      Voluptatum sit optio molestiae deserunt, incidunt exercitationem eaque pariatur dicta, dignissimos laborum, quidem
+      quam fugit assumenda magnam numquam vitae iure libero alias maiores quas eum? Pariatur perspiciatis laborum
+      nesciunt ullam.
+      Mollitia tempore delectus repudiandae consequatur est non cumque nostrum ab repellat maxime modi, reprehenderit
+      saepe explicabo ipsam praesentium ea doloribus. Repellat voluptas deserunt voluptatum asperiores adipisci
+      necessitatibus, sequi dignissimos velit.
+      Temporibus, vitae alias cumque quis dolores voluptates quisquam debitis labore facilis, possimus tempore quod ea
+      unde a corrupti. Blanditiis est esse voluptate minima minus ab amet eveniet consectetur expedita repudiandae.
+      Aspernatur id nihil cupiditate itaque quas illo maxime eius ex. Laudantium, aliquam cupiditate officia iusto ab in
+      accusamus? Nemo velit dolorem temporibus laboriosam, culpa corporis. Facilis aliquam odio optio excepturi?
+      Eligendi tenetur suscipit dolor iure neque sed dicta laudantium dolore unde fugiat deleniti quos impedit dolores
+      distinctio repudiandae, necessitatibus voluptatem sit ducimus? Cum autem dignissimos quidem libero molestiae?
+      Quisquam, repudiandae!
+      Possimus animi, commodi facere vitae repellat mollitia fugit quibusdam a. Nulla repudiandae officiis temporibus
+      praesentium accusantium sint odit laboriosam quod corrupti nihil. Velit temporibus fugit repellat ut nesciunt, non
+      ullam?
+      Vero necessitatibus ratione molestiae nesciunt, voluptas ea alias earum aspernatur cumque magni facere, dolorum
+      debitis nobis aliquid pariatur ullam voluptate soluta, inventore tempora! Ipsam, corporis ex. Accusamus architecto
+      assumenda molestias?
+      Mollitia perspiciatis quod, odio maxime laudantium libero magnam nam dolor quisquam facere. Eius pariatur, rerum
+      incidunt harum distinctio molestiae quam ipsa magnam at voluptates culpa quisquam amet impedit corrupti quod.
+      Fuga voluptatem rem quibusdam ut placeat itaque possimus debitis facere ad recusandae aperiam, culpa facilis quae
+      laborum. Explicabo voluptatum cumque doloremque in reiciendis velit mollitia laboriosam dolor, dicta incidunt
+      unde.
+      Quaerat minima itaque hic aut quasi ut. Dolor fugiat quisquam laudantium consequuntur dolores autem est, eaque, ex
+      vitae aperiam repudiandae sit quia rerum consectetur quae veritatis amet deleniti, corrupti esse.
+      Dicta officiis facere omnis commodi. Omnis consequatur iste nulla sequi quod, sapiente possimus optio dignissimos
+      corrupti perferendis repellat dolor ea architecto veniam maiores atque. Nostrum ratione pariatur tempore aliquam
+      corporis?
+      Quibusdam neque quas atque magnam repellat quam expedita rerum soluta ex! Voluptate velit tempore itaque
+      distinctio, quia explicabo assumenda quod, doloribus ipsum, facere dicta non reprehenderit incidunt? Unde,
+      voluptatem error!
+      Eligendi, sapiente rerum doloribus corporis perspiciatis quaerat commodi architecto, dolorem, nisi saepe dolore
+      odio illum! Consequatur dignissimos officiis excepturi dolore sequi illum dolores, rem soluta cum recusandae
+      dicta, pariatur harum.
+      Perferendis minima voluptate libero eius, saepe mollitia error aspernatur ipsa voluptas corrupti itaque, ipsam
+      nisi illo assumenda distinctio sit inventore soluta! Fugiat dolorum obcaecati, repellat quam unde porro voluptate
+      explicabo?
+      Maiores commodi, velit dolore accusantium consequatur placeat perspiciatis veritatis non quo saepe repellat
+      inventore! Nulla voluptatum, qui id consequuntur quos illum tempora possimus, ipsam accusamus eligendi veritatis
+      aliquam dolor. Possimus.
+      Et, eum veniam consequatur beatae ipsa nemo? Esse necessitatibus culpa vel vero quae perferendis officia ut autem
+      asperiores aliquam veniam cumque atque in voluptate magni laudantium voluptatum, quam laboriosam minus?
+      Suscipit necessitatibus, itaque esse nesciunt repellat fugit ad libero a aliquam impedit consequuntur? Harum id
+      deleniti corporis dolorem velit ea, ratione molestiae quis beatae et. Sunt odit eum architecto consequuntur!
+      Asperiores possimus alias facere et laborum eaque pariatur quos libero vel in ad, nemo explicabo illum sapiente
+      quia animi voluptatem modi, temporibus eveniet inventore! Architecto perferendis cumque in blanditiis fugiat.
+      Reiciendis debitis cumque voluptatum quae facilis ab sed eligendi doloribus excepturi illum soluta similique quasi
+      blanditiis aliquid praesentium a, sapiente numquam consequuntur quaerat sint sit ullam distinctio totam dolore.
+      Voluptates?
+      A nostrum aliquid laudantium laboriosam nam ipsam ullam blanditiis, odit dolorem. Tempora minima nobis maiores
+      harum voluptate quam exercitationem quo consequuntur, quibusdam itaque cum accusamus animi molestiae accusantium
+      architecto corporis.
+      Quaerat pariatur culpa itaque sint sapiente modi obcaecati blanditiis fugiat delectus corporis quos accusantium
+      labore repellat, odit facere quibusdam ad. Natus, dolorem? Ut aliquam perferendis quo dolorem, temporibus nobis
+      minima?
+      Quos atque non sequi quo illum iste velit eaque laborum aliquid perferendis, rem rerum minus reiciendis nihil.
+      Nihil, quaerat numquam, iste aperiam non, praesentium saepe laudantium pariatur blanditiis voluptatibus
+      distinctio.
+      Tempora, quo fuga sapiente aliquid illum sint, laboriosam explicabo deserunt ipsum delectus praesentium minima,
+      ipsam iure temporibus sunt nostrum molestias quam neque totam! Laudantium, alias! Quasi quae molestiae expedita
+      nam!
+      Voluptatibus nihil accusantium fuga distinctio doloremque qui repellat soluta corrupti, error tempore voluptas?
+      Inventore laudantium accusamus eaque reprehenderit aliquam aliquid, quo dolore iure at quas quam fuga magni ipsa
+      optio?
+      Sequi et architecto hic placeat fugiat odit error quaerat ut numquam nam sint maxime sapiente quis explicabo
+      itaque illo consequatur aperiam vel recusandae aliquid praesentium, odio, vitae soluta. Dolore, voluptatibus?
+      Ad ab facilis, libero quae quod id illo animi esse in laborum totam architecto cumque doloribus? Harum
+      reprehenderit magni aperiam eius cum asperiores tempora atque, obcaecati sapiente libero ullam vel.
+      Nobis, praesentium? Ea, dolores ut quae error iusto alias vero quibusdam voluptate perferendis omnis, nostrum aut,
+      sunt odit impedit illo ipsam qui illum repudiandae quam quod reiciendis aperiam. Blanditiis, impedit?
+      Omnis, animi perspiciatis, alias provident soluta quidem et minus reprehenderit deleniti culpa veritatis numquam!
+      Eius quis, ratione dolorem labore vel aliquam illo dolorum dolor eveniet commodi beatae porro itaque possimus.
+      Tempore, magnam a reiciendis iusto assumenda illo. Adipisci incidunt porro inventore minima ipsam ipsa, corrupti
+      consectetur ex optio earum totam perspiciatis ab magnam dolore aperiam praesentium, nihil, cupiditate veritatis.
+      Hic?
+      Sequi, nemo consequuntur ducimus id esse, corporis optio culpa blanditiis laborum labore commodi facere expedita
+      maiores veritatis fugiat quibusdam recusandae dolores error sapiente laboriosam? Perferendis nihil dolore facere
+      omnis nulla.
+      Nesciunt, consectetur assumenda. Sequi, nulla delectus. Eaque neque et similique quidem possimus exercitationem
+      necessitatibus delectus tempore alias odit eius sapiente consectetur dolorum quae, eos culpa perspiciatis aliquid
+      cumque aliquam recusandae?
+      Eius quo obcaecati corrupti officiis iste dignissimos animi sequi aliquam quos corporis rem repellendus facere
+      omnis, ducimus tempore asperiores? Similique hic totam officiis optio magnam eius nesciunt. Incidunt, natus.
+      Consequuntur.
+      Dicta quia illo laboriosam eligendi asperiores excepturi alias repudiandae? Iure asperiores eveniet aut vel
+      tempore ex nisi illo ad, voluptatum neque ducimus porro beatae, repudiandae id, fugiat omnis qui nam!
+      Cupiditate fugiat veritatis nemo ex eos alias velit voluptatem ipsa necessitatibus cum, eligendi nisi mollitia
+      enim accusantium animi sint quas! Tenetur, deleniti dolorem nobis odio tempora earum consectetur dolore. Sint!
+      Vel ratione quasi odit quas pariatur animi impedit aliquid fugiat debitis corrupti quisquam similique quibusdam,
+      ab quod, quaerat provident! Laborum deserunt mollitia pariatur quod. Eligendi quam vero dicta quidem fugit?
+      Voluptates obcaecati quis nulla fugit, ratione dolore minima impedit quae aliquid nemo, laudantium nobis? Ea unde
+      repudiandae voluptas reiciendis aspernatur quibusdam, iusto assumenda. Numquam, ratione voluptas. Odit labore
+      delectus tempora!
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+  </div>
+  </div>
 
 
 
