--- a/front/site/paginas/greco-romana.html
+++ b/front/site/paginas/greco-romana.html
@@ -10,7 +10,9 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>Greco-Romana | SEPE</title>
 </head>
-
+<header>
+  <h1>GRECO ROMANA</h1>
+</header>
 <body>
   <div class="container text-center">
     <div class="row">
