--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -10,6 +10,9 @@
   <title>Grega | SEPE</title>
 </head>
 <body>
+  <header>
+    <h1>GREGA</h1>
+  </header>
   <div class="container text-center">
     <div class="row">
       <div class="col">
