--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
-    <div class="container text-center">
+
+    <header>
+        <h1>HINDU</h1>
+    </header>
         <div class="row">
             <div class="col">
                 1 of 3
@@ -73,7 +76,6 @@
                 3 of 3
             </div>
         </div>
-    </div>
 </body>
 
 </html>
