--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-    <div class="container text-center">
+    <header>
+        <h1>NÓRDICA</h1>
+    </header>
         <div class="row">
             <div class="col">
                 1 of 3
@@ -73,7 +75,7 @@
                 3 of 3
             </div>
         </div>
-    </div>
+
 </body>
 
 </html>
