--- a/front/site/quiz/grega.html
+++ b/front/site/quiz/grega.html
@@ -26,7 +26,7 @@
                         <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
                     </ul>
                 </li>
-                <li id="link-grecia"><a href="../paginas/grega.html">MITOLOGIA GREGA</a></li>
+                <li id="link-mitologia"><a href="../paginas/grega.html">MITOLOGIA GREGA</a></li>
             </ul>
         </nav>
     </header>
