footer e layout adicionado

--- a/front/site/paginas/index.html
+++ b/front/site/paginas/index.html
@@ -5,7 +5,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../paginas/css/index.css">
+  <link rel="stylesheet" href="../paginas/css/style.css">
   <title>Index | SEPE</title>
-      
+</head>
+
+<body>
+  <footer>
+    <div class="footer-container">
+      <div class="footer-logo">
+        <img src="../../../back/imagens/LYJEK.png" alt="Logo do site">
+      </div>
+      <div class="footer-links">
+        <ul>
+          <li><a href="../paginas/index.html">Página Inicial</a></li>
+          <li><a href="../paginas/fenicia.html">Mitologia Fenícia</a></li>
+          <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
+          <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
+          <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
+          <li><a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a></li>
+          <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
+          <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
+        </ul>
+      </div>
+      <div class="footer-social">
+        <ul>
+          <li><a href="https://github.com/spricigom"><i>Emili</i></a></li>
+          <li><a href="https://github.com/Joaovictor23t4"><i>João</i></a></li>
+          <li><a href="https://github.com/kauabarros-24"><i>Kauã</i></a></li>
+          <li><a href="https://github.com/dnzLucas"><i>Lucas</i></a></li>
+          <li><a href="https://github.com/LuizEduardoCR"><i>Luiz Eduardo</i></a></li>
+          <li><a href="https://github.com/LuizBlume"><i>Luiz Fernando</i></a></li>
+          <li><a href="https://github.com/YohanaJahn"><i>Yohana</i></a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2023 LYJEK/mitologias - Todos os direitos reservados.</p>
+    </div>
+  </footer>
+</body>
 
 </html>
