--- a/front/site/paginas/greco-romana.html
+++ b/front/site/paginas/greco-romana.html
@@ -13,6 +13,7 @@
 <header>
   <h1>GRECO ROMANA</h1>
 </header>
+
 <body>
   <div class="container text-center">
     <div class="row">
@@ -162,6 +163,39 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="footer-container">
+      <div class="footer-logo">
+        <img src="../../../back/imagens/LYJEK.png" alt="Logo do site">
+      </div>
+      <div class="footer-links">
+        <ul>
+          <li><a href="../paginas/index.html">Página Inicial</a></li>
+          <li><a href="../paginas/fenicia.html">Mitologia Fenícia</a></li>
+          <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
+          <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
+          <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
+          <li><a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a></li>
+          <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
+          <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
+        </ul>
+      </div>
+      <div class="footer-social">
+        <ul>
+          <li><a href="https://github.com/spricigom"><i>Emili</i></a></li>
+          <li><a href="https://github.com/Joaovictor23t4"><i>João</i></a></li>
+          <li><a href="https://github.com/kauabarros-24"><i>Kauã</i></a></li>
+          <li><a href="https://github.com/dnzLucas"><i>Lucas</i></a></li>
+          <li><a href="https://github.com/LuizEduardoCR"><i>Luiz Eduardo</i></a></li>
+          <li><a href="https://github.com/LuizBlume"><i>Luiz Fernando</i></a></li>
+          <li><a href="https://github.com/YohanaJahn"><i>Yohana</i></a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2023 LYJEK/mitologias - Todos os direitos reservados.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
