--- a/front/site/paginas/index.html
+++ b/front/site/paginas/index.html
@@ -1,48 +1,60 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../paginas/css/index.css">
-  <link rel="stylesheet" href="../paginas/css/style.css">
   <title>Index | SEPE</title>
 </head>
 
 <body>
-  <footer>
-    <div class="footer-container">
-      <div class="footer-logo">
-        <img src="../../../back/imagens/LYJEK.png" alt="Logo do site">
+  <div class="container">
+    <div class="tabs">
+      <input id="web" type="radio" name="slider" checked>
+      <input id="grafico" type="radio" name="slider">
+      <input id="fotografia" type="radio" name="slider">
+      <div class="botoes">
+        <label for="web"></label>
+        <label for="grafico"></label>
+        <label for="fotografia"></label>
       </div>
-      <div class="footer-links">
-        <ul>
-          <li><a href="../paginas/index.html">Página Inicial</a></li>
-          <li><a href="../paginas/fenicia.html">Mitologia Fenícia</a></li>
-          <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
-          <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
-          <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
-          <li><a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a></li>
-          <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
-          <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
-        </ul>
-      </div>
-      <div class="footer-social">
-        <ul>
-          <li><a href="https://github.com/spricigom"><i>Emili</i></a></li>
-          <li><a href="https://github.com/Joaovictor23t4"><i>João</i></a></li>
-          <li><a href="https://github.com/kauabarros-24"><i>Kauã</i></a></li>
-          <li><a href="https://github.com/dnzLucas"><i>Lucas</i></a></li>
-          <li><a href="https://github.com/LuizEduardoCR"><i>Luiz Eduardo</i></a></li>
-          <li><a href="https://github.com/LuizBlume"><i>Luiz Fernando</i></a></li>
-          <li><a href="https://github.com/YohanaJahn"><i>Yohana</i></a></li>
-        </ul>
+      <div class="conteudo">
+        <div class="caixa web">
+          <div class="conteudocx">
+            <ion-icon name="earth-outline"></ion-icon>
+            <h2>Desenvolvimento Web</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
+              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
+              deleniti, eaque enim consequatur.</p>
+              <button>Aprender Mais</button>
+          </div>
+        </div>
+        <div class="caixa grafico">
+          <div class="conteudocx">
+            <ion-icon name="camera-outline"></ion-icon>
+            <h2>design grafico</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
+              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
+              deleniti, eaque enim consequatur.</p>
+              <button>Aprender Mais</button>
+          </div>
+        </div>
+        <div class="caixa fotografia">
+          <div class="conteudocx">
+            <ion-icon name="image-outline"></ion-icon>
+            <h2>fotografia</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit non cumque eligendi modi
+              repellendus fuga ullam debitis earum dolorem delectus maxime sequi dolore quae repudiandae, ipsum
+              deleniti, eaque enim consequatur.</p>
+              <button>Aprender Mais</button>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="footer-bottom">
-      <p>&copy; 2023 LYJEK/mitologias - Todos os direitos reservados.</p>
-    </div>
-  </footer>
+  </div>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
