--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -112,7 +112,7 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao2" id="" value="certo"> A - Fenrir
+                    <input type="radio" name="questao2" id="" value="errado"> A - Fenrir
                 </label>
                 <label>
                     <input type="radio" name="questao2" id="" value="errado"> B - Sleipnir
@@ -121,7 +121,7 @@
                     <input type="radio" name="questao2" id="" value="errado"> C - Jormungandr
                 </label>
                 <label>
-                    <input type="radio" name="questao2" id="" value="errado"> D - Skoll
+                    <input type="radio" name="questao2" id="" value="certo"> D - Skoll
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta2">
@@ -161,7 +161,7 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao4" id="" value="errado"> A - Odin (sabedoria), Thor (força), Freyja
+                    <input type="radio" name="questao4" id="" value="certo"> A - Odin (sabedoria), Thor (força), Freyja
                     (amor)
                 </label>
                 <label>
@@ -173,7 +173,7 @@
                     (vigilância)
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="certo"> D - Odin (sabedoria), Freyja (amor), Thor
+                    <input type="radio" name="questao4" id="" value="errado"> D - Odin (sabedoria), Freyja (amor), Thor
                     (trovão)
                 </label>
 
