quiz de greco-romana feito

--- a/front/site/quiz/greco-romana.html
+++ b/front/site/quiz/greco-romana.html
@@ -161,14 +161,13 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao4" id="" value="errado"> A - Rômulo e Remo; foram amamentados por
-                    uma loba.
+                    <input type="radio" name="questao4" id="" value="certo"> A - Rômulo e Remo; foram amamentados por uma loba
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="errado"> B - Nona, Decima e Morta
+                    <input type="radio" name="questao4" id="" value="errado"> B - Júlio e Augusto; construíram a cidade de Roma
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="certo"> C - Cloto, Láquesis e Átropos
+                    <input type="radio" name="questao4" id="" value="errado"> C - Cloto, Láquesis e Átropos
                 </label>
                 <div class="buttonResponder">
                 <label>
@@ -182,19 +181,21 @@
         <section id="secao-pergunta-5" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 5:</h1>
-                <p class="pergunta">Qual é o mito de Orfeu e Eurídice na mitologia greco-romana, e qual foi o trágico destino do casal?</p>
+                <p class="pergunta">Quais são os nomes das três Moiras que controlam o destino dos mortais na mitologia greco-romana?</p>
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao5" id="" value="errado"> A - 
+                    <input type="radio" name="questao5" id="" value="errado"> A - Ceres, Vênus e Diana
                 </label>
                 <label>
-                    <input type="radio" name="questao5" id="" value="errado> B - Os irmãos gêmeos na lenda de fundação de Roma são Castor e Pólux
+                <input type="radio" name="questao5" id="" value="errado"> B - Nona, Decima e Morta
                 </label>
                 <label>
-                    <input type=" radio" name="questao5" id="" value="certo"> C - A lenda de fundação de Roma envolve
-                    os irmãos gêmeos Rômulo e Remo, criados por uma loba e destinados a fundar a cidade
+                    <input type="radio" name="questao5" id="" value="certo"> C - Cloto, Láquesis e Átropos
+                </label>
+                <label>
+                    <input type="radio" name="questao5" id="" value="errado"> D - Júpiter, Marte e Netuno
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta5">
@@ -204,24 +205,22 @@
         <section id="secao-pergunta-6" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 6:</h1>
-                <p class="pergunta">Quem é o deus romano dos mensageiros, das estradas e dos viajantes, equivalente a
-                    Hermes na mitologia grega</p>
+                <p class="pergunta">Qual é o mito de Orfeu e Eurídice na mitologia greco-romana, e qual foi o trágico destino do casal?</p>
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao6" id="" value="errado"> A - Hades
+                    <input type="radio" name="questao6" id="" value="errado"> A - Orfeu era um herói que realizou grandes feitos
                 </label>
                 <label>
-                    <input type="radio" name="questao6" id="" value="errado"> B - Marte
+                    <input type="radio" name="questao6" id="" value="errado"> B - Orfeu era um deus que se apaixonou por uma mortal  
                 </label>
                 <label>
-                    <input type="radio" name="questao6" id="" value="certo"> C - Mercúrio
+                    <input type="radio" name="questao6" id="" value="certo"> C - Orfeu era um poeta que desceu ao submundo para resgatar sua amada Eurídice, mas perdeu-a novamente por olhar para trás antes de sair
                 </label>
                 <label>
-                    <input type="radio" name="questao6" id="" value="errado"> D - Plutão
+                    <input type="radio" name="questao6" id="" value="errado"> D - Orfeu era um adivinho que previu o futuro com precisão
                 </label>
-
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta6">
                 </div>
@@ -230,22 +229,21 @@
         <section id="secao-pergunta-7" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 7:</h1>
-                <p class="pergunta">Explique o papel e a importância do deus Jano na mitologia romana</p>
+                <p class="pergunta">Qual é a história da Titanomaquia na mitologia grega e como os deuses olímpicos derrotaram os titãs</p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao7" id="" value="errado"> A - Jano não é uma figura importante na
-                    mitologia romana
+                    <input type="radio" name="questao7" id="" value="certo"> A - Os titãs eram deuses menores que se rebelaram contra os olímpicos, mas foram derrotados em uma grande batalha
                 </label>
                 <label>
-                    <input type="radio" name="questao7" id="" value="errado"> B - Jano é um deus guerreiro que liderou
-                    as legiões romanas
+                    <input type="radio" name="questao7" id="" value="errado"> B - Os titãs eram deuses mais poderosos que governaram o Olimpo antes dos olímpicos; foram convencidos a se retirar pacificamente
                 </label>
                 <label>
-                    <input type="radio" name="questao7" id="" value="certo"> C - Jano é o deus romano das portas,
-                    entradas, começos e fins, frequentemente representado com duas faces, uma olhando para frente e
-                    outra para trás, simbolizando a transição
+                    <input type="radio" name="questao7" id="" value="errado"> C - Os titãs e os olímpicos formaram uma aliança para enfrentar ameaças externas 
+                </label>
+                <label>
+                    <input type="radio" name="questao7" id="" value="errado"> D - Os olímpicos pediram ajuda a outras divindades para derrotar os titãs
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta7">
@@ -255,23 +253,21 @@
         <section id="secao-pergunta-8" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 8:</h1>
-                <p class="pergunta">Qual é a história do mito de Rômulo e Remo e como ela se relaciona com a fundação de
-                    Roma?</p>
+                <p class="pergunta">Explique o mito de Prometeu e como ele trouxe o fogo para os humanos</p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao8" id="" value="errado"> A - Rômulo e Remo não têm relação com a
-                    fundação de Roma
+                    <input type="radio" name="questao8" id="" value="certo"> A - Prometeu roubou o fogo de Zeus e o deu aos humanos em uma tocha
                 </label>
                 <label>
-                    <input type="radio" name="questao8" id="" value="errado"> B - Rômulo e Remo eram inimigos mortais
-                    que nunca colaboraram
+                    <input type="radio" name="questao8" id="" value="errado"> B - Prometeu fez um trato com os deuses para trazer o fogo do Monte Olimpo aos humanos
                 </label>
                 <label>
-                    <input type="radio" name="questao8" id="" value="certo"> C - Rômulo e Remo são irmãos gêmeos que
-                    foram abandonados e criados por uma loba. Eles cresceram e fundaram a cidade de Roma, mas Rômulo
-                    matou Remo em uma disputa, tornando-se o primeiro rei de Roma
+                    <input type="radio" name="questao8" id="" value="errado"> C - Prometeu inventou o fogo e ensinou os humanos a utilizá-lo
+                </label>
+                <label>
+                    <input type="radio" name="questao8" id="" value="errado"> D - Prometeu pediu a Hefesto que lhe trouxesse o fogo do submundo para os humanos
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta8">
@@ -281,22 +277,21 @@
         <section id="secao-pergunta-9" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 9:</h1>
-                <p class="pergunta">Qual é o papel de Mercúrio na mitologia romana, além de ser o mensageiro dos deuses?
-                </p>
+                <p class="pergunta">Quem é Teseu e quais são suas aventuras mais notáveis na mitologia grega?</p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao9" id="" value="errado"> A - Mercúrio não tem outro papel além de
-                    mensageiro.
+                    <input type="radio" name="questao9" id="" value="errado"> A - Teseu era um guerreiro troiano que lutou na Guerra de Troia
                 </label>
                 <label>
-                    <input type="radio" name="questao9" id="" value="errado"> B - Mercúrio é o deus do amor na mitologia
-                    romana
+                    <input type="radio" name="questao9" id="" value="errado"> B - Teseu era um músico talentoso que encantou os deuses com sua música
                 </label>
                 <label>
-                    <input type="radio" name="questao9" id="" value="certo"> C - Mercúrio é também o deus do comércio,
-                    dos viajantes, dos ladrões e da eloquência
+                    <input type="radio" name="questao9" id="" value="certo"> C - Teseu era um herói ateniense que derrotou o Minotauro e participou da busca pelo Velocino de Ouro
+                </label>
+                <label>
+                    <input type="radio" name="questao9" id="" value="errado"> D - Teseu era um filósofo grego famoso por suas ideias sobre a natureza
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta9">
@@ -306,22 +301,21 @@
         <section id="secao-pergunta-10" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 10:</h1>
-                <p class="pergunta">Quem é a deusa romana da agricultura e da fertilidade, equivalente à Deméter na
-                    mitologia grega?</p>
+                <p class="pergunta">Como é retratado o mito de Édipo em tragédias gregas como a de Sófocles?</p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao10" id="" value="errado"> A - Hera
+                    <input type="radio" name="questao10" id="" value="errado"> A - Édipo era umherói que realizou muitos feitos heróicos
                 </label>
                 <label>
-                    <input type="radio" name="questao10" id="" value="errado"> B - Afrodite
+                    <input type="radio" name="questao10" id="" value="certo"> B - Édipo era um rei que matou seu pai e se casou com sua mãe, trazendo desgraça à sua cidade
                 </label>
                 <label>
-                    <input type="radio" name="questao10" id="" value="certo"> C - Ceres
+                    <input type="radio" name="questao10" id="" value="errado"> C - Édipo era um sábio filósofo cujas obras influenciaram o pensamento grego
                 </label>
                 <label>
-                    <input type="radio" name="questao10" id="" value="errado"> D - Ártemis
+                    <input type="radio" name="questao10" id="" value="errado"> D - Édipo era um deus que governou a cidade de Tebas com justiça
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta10">
