adicionei uns texto

--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -12,17 +12,15 @@
 <body>
   <header>
     <a href="../paginas/index.html" id="logo"><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"></a>
-    <h1>EGÍPCIA</h1>
+    <h1>Irlandesa</h1>
   </header>
   <main>
     <div class="container-main">
       <div class="col">
-        
+
       </div>
       <div class="col">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio laborum harum, eligendi, velit explicabo
-        officia repellat culpa doloremque, officiis quisquam itaque maiores? Eveniet consequuntur incidunt nostrum autem
-        repudiandae tempore illo!
+        
       </div>
       <div class="col">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat sunt, exercitationem vitae ullam laudantium
