--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -1,165 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../paginas/css/nordica.css">
     <link rel="stylesheet" href="../paginas/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Nórdica | SEPE</title>
 </head>
 
 <body>
-    <header>
-        <h1>NÓRDICA</h1>
-    </header>
+  <header>
+    <a href="../paginas/index.html" id="logo"><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"></a>
+    <h1>Irlandesa</h1>
+  </header>
     <div class="row">
         <div class="col">
             1 of 3
         </div>
         <div class="col-6">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos delectus quas aliquam repudiandae, quos ab
-            veritatis velit atque deleniti, sint nisi ex exercitationem excepturi sequi dolores officiis quidem pariatur
-            officia!
-            Iusto incidunt nesciunt officiis, quo illum porro labore iure. At quia consequatur animi magni, mollitia aut
-            asperiores sed. Corporis, voluptatibus nam? Consectetur quia mollitia eius unde dignissimos perspiciatis
-            nobis aperiam.
-            Sunt odit, illum rem fuga harum quo error? Veritatis quae reprehenderit commodi, animi ea quasi cum nostrum
-            ducimus. Nisi excepturi sequi voluptate dolores ipsam ipsum quod ut. Quo, sunt vitae.
-            Repellendus reprehenderit deserunt cum delectus sequi expedita saepe quibusdam. Esse eligendi delectus nam
-            minus neque eum velit enim suscipit sed repellat! Quos repellat quaerat numquam ducimus veritatis excepturi
-            animi eveniet.
-            Dolores, tempore! Non aspernatur illo tempore nobis voluptatum laborum cum culpa optio. Eum obcaecati
-            distinctio magni, perspiciatis ullam nemo nobis, magnam sunt dicta sit nihil eligendi. Dolorem nemo non
-            ipsa?
-            Similique tempora, fuga magni repellendus animi repudiandae doloremque quisquam labore perferendis incidunt,
-            quas, impedit delectus tempore tenetur non odio quae dolor natus cum beatae nemo! Nemo perferendis ad non
-            ab.
-            Mollitia dolorum iure in quas obcaecati? Voluptatem quasi nemo consequuntur facilis sunt natus delectus
-            aperiam aut, harum est, voluptatibus ullam quam, dolore quo soluta iste nostrum molestias rem aspernatur
-            magnam!
-            Praesentium nisi assumenda necessitatibus ex dolores quisquam animi possimus cupiditate! Voluptatibus,
-            laudantium hic illum corporis adipisci repellat dolor vel sunt odit voluptates nobis, ad praesentium error,
-            molestiae enim impedit porro?
-            Quod eius officiis tenetur id obcaecati porro beatae ipsa vel. Deserunt temporibus nemo quo culpa ut
-            consequatur, pariatur est doloribus quis dolor, molestiae dolorum repudiandae, saepe fuga voluptatum quas
-            impedit?
-            In perspiciatis consequatur obcaecati quo, et molestiae debitis harum voluptate quia asperiores, quae sequi
-            vel odio fuga quasi, at qui quis sapiente deleniti dolores eaque id! Quia est libero nisi.
-            Numquam eius maiores, suscipit consectetur laborum voluptate. Amet consequuntur nisi hic suscipit, similique
-            fuga nobis accusantium neque eaque repudiandae eum quo esse aliquam id at officia mollitia consectetur?
-            Nostrum, tenetur!
-            Maiores corrupti reiciendis nemo, corporis voluptatibus quae, minus ea ducimus sunt ad dolorum sint! Eveniet
-            minima officia amet ipsum, fugiat aliquid illum nulla, voluptatem architecto illo doloribus deleniti
-            eligendi et!
-            Amet culpa accusamus fuga rem cum debitis, aperiam quod est facere magnam explicabo. Tempora recusandae
-            asperiores veniam, cumque, cum corrupti magni et a distinctio architecto repudiandae assumenda nihil
-            repellat nesciunt.
-            Porro possimus quidem aut excepturi nesciunt magnam recusandae vero ratione temporibus velit aspernatur
-            officia, voluptates at culpa facilis cupiditate, quisquam sint eos nihil ullam. Possimus ab inventore ipsum
-            beatae qui!
-            Quisquam hic excepturi pariatur delectus odit. Veritatis dolor hic at veniam explicabo fugiat nesciunt amet
-            est ipsa, accusantium culpa, eius earum modi tempore? Harum impedit hic, esse nam eius modi?
-            Suscipit consectetur, doloribus qui dignissimos esse accusamus commodi? Facilis magni eligendi pariatur
-            labore quod aliquid ut ipsa, repudiandae voluptatum sint id, nostrum vel consectetur corrupti iure provident
-            eius fuga reprehenderit.
-            Qui nisi facere beatae voluptas atque pariatur impedit expedita autem provident reprehenderit iste vero
-            reiciendis eveniet eaque labore neque ipsa et veniam, ad hic amet eos natus. Ratione, consequatur provident!
-            Voluptatibus sunt totam dolore rem atque itaque aspernatur repudiandae illum eum quod impedit, natus cum id
-            magnam? Sint harum accusamus in laudantium, voluptates corrupti tenetur omnis, aliquam, sequi exercitationem
-            molestias.
-            Quidem quos modi optio blanditiis facilis fugit qui alias eaque expedita, magni, architecto magnam ex odit
-            minus dignissimos, enim eos asperiores commodi illum nulla aliquam? Dolore suscipit eaque praesentium
-            officia.
-            Dolore maxime totam autem tempora corrupti aut in ea amet aliquid quasi minus magnam, facilis cumque
-            voluptates tenetur eos, ipsum assumenda. Maxime adipisci beatae odio porro quas quo officia enim?
-            Commodi animi vero eveniet asperiores ipsam ipsum magnam, incidunt est illo sint libero mollitia vitae
-            minima deserunt nulla nam obcaecati doloremque delectus voluptate provident repellat accusantium deleniti.
-            Veniam, ad ducimus.
-            Maiores quasi, magnam voluptatibus debitis praesentium pariatur, nobis vitae reiciendis voluptate illum
-            animi mollitia odio. Magni quae vel numquam voluptatibus id corrupti reprehenderit, explicabo perspiciatis
-            et voluptates, reiciendis itaque odio.
-            Quas alias, nobis non voluptatem vel unde nulla. Eaque accusamus quisquam, excepturi ullam assumenda,
-            ducimus amet quas sit soluta debitis minus pariatur dolorum nam, vitae nesciunt neque eveniet quam officiis?
-            Inventore cum rerum sapiente alias veniam dicta quod eius illo iste repudiandae mollitia nisi ipsum
-            praesentium iusto at necessitatibus dolorem, sed obcaecati. Dolor nihil debitis aliquid itaque cum ut in?
-            Consectetur, enim fugiat. Odio quod, cumque temporibus accusantium illum qui labore dolores voluptatum at.
-            Nesciunt doloribus eos ipsa modi quia, molestiae perspiciatis mollitia tenetur blanditiis libero odit ea,
-            excepturi ad.
-            Nesciunt commodi dolores voluptatem facere recusandae odit laboriosam soluta quaerat laudantium dignissimos
-            aut qui eius perspiciatis autem libero molestias eveniet quos corrupti, sequi vitae aperiam dolor. Dolore
-            porro tempore nihil?
-            Iste incidunt iure inventore voluptatem sed, quidem blanditiis facere voluptates magnam suscipit veniam
-            impedit animi ipsum minima veritatis eius voluptate omnis nostrum laboriosam fugiat. Voluptate aliquid est
-            doloribus aspernatur voluptates!
-            Quia rerum consequuntur commodi numquam quis animi eaque dolor labore veritatis, tempore necessitatibus.
-            Nesciunt veritatis inventore, harum itaque nihil odio veniam illum dolor eveniet doloribus, excepturi
-            quibusdam sunt nulla quisquam.
-            Possimus voluptates reiciendis maiores aliquid saepe non, eaque voluptate, doloremque molestias mollitia
-            placeat sint, suscipit et fugiat repellendus. Velit consequuntur eveniet voluptatum dolore? Quos distinctio
-            quidem voluptatum, amet ipsa pariatur.
-            Expedita, repudiandae. Earum quae repudiandae consequatur placeat sunt? Iste vero pariatur, explicabo velit
-            eum adipisci, fuga molestias sunt unde fugit nemo dolorem tempora odit mollitia error magni. Quos, corporis
-            voluptate!
-            Molestiae, tempore esse necessitatibus iste eveniet iure officia impedit itaque deleniti dolorum corrupti
-            maiores sequi hic ad? Sequi sint, eum explicabo, fuga non in doloribus veritatis alias, consequatur natus
-            tempora.
-            Omnis facere eius laborum sequi vel aperiam, natus, dolores deserunt laboriosam recusandae nemo at quo
-            facilis rerum, minus ullam. Quo officiis magnam sit doloribus cumque ab nesciunt molestias inventore
-            ratione.
-            Minima soluta quasi ducimus cum asperiores, dolorem nobis rem ipsam repellendus ut blanditiis temporibus
-            provident laborum tenetur consequatur nisi culpa deserunt reprehenderit ratione veniam delectus enim amet
-            rerum! Dignissimos, temporibus?
-            Cumque sit maxime distinctio id, neque ipsum cum error laborum numquam reiciendis possimus ducimus
-            doloribus, ipsa dicta sapiente? Adipisci aperiam fugit doloremque? Quo consectetur dignissimos perferendis
-            accusamus nihil modi molestias.
-            Beatae ipsam repellendus odio magni esse libero alias, sint placeat quia quam accusamus voluptatibus in
-            ratione veritatis. Magnam eius pariatur atque nisi quidem ipsam dolor itaque vero, ut aut reprehenderit?
-            Fugiat debitis magni eligendi. Mollitia accusantium quo commodi asperiores, quam dolor nesciunt assumenda
-            unde dignissimos exercitationem atque illo rerum! Reiciendis impedit libero repudiandae earum eaque quaerat
-            expedita doloremque delectus voluptatum?
-            Quidem voluptate aut cum ut voluptatem nostrum quaerat saepe reiciendis, est voluptatibus sapiente nisi
-            earum libero! Consequuntur quibusdam quam laboriosam, laudantium, pariatur sunt iusto animi saepe dolore
-            illo quia nihil.
-            Odio omnis facilis molestias reprehenderit, nisi dolor. Cum asperiores natus recusandae, error, dolorum sint
-            facere provident, iure ullam voluptate perferendis placeat praesentium veritatis. Dignissimos voluptatem,
-            mollitia reprehenderit eos ea praesentium.
-            Fugiat repudiandae corporis pariatur ratione explicabo laudantium culpa nobis autem? Autem impedit facere
-            numquam architecto id, aut alias voluptatibus harum dicta tenetur. Quia maxime, dolores neque id placeat
-            sequi mollitia.
-            Nihil cumque mollitia, consectetur, illo nostrum temporibus molestiae pariatur, aliquid rem quidem quos
-            aspernatur fugiat excepturi qui hic nisi eos tempore et eligendi blanditiis facere. Asperiores nisi dolor
-            sed qui?
-            Nemo dignissimos voluptatem quisquam veniam temporibus obcaecati doloremque, sint facilis repellendus autem
-            magnam unde sit corrupti deleniti, vitae a quaerat culpa. Praesentium eos repellat impedit aperiam itaque
-            voluptatibus architecto obcaecati.
-            Cupiditate mollitia accusamus laborum et quos modi, consectetur cum consequatur numquam deserunt vero,
-            placeat ipsam voluptatum ducimus unde natus! Itaque blanditiis deserunt, mollitia aperiam temporibus
-            perspiciatis illo doloremque esse excepturi.
-            Error, vero voluptatibus? Tenetur qui iusto minima dolores placeat illum tempora voluptates sapiente
-            doloremque sequi maxime veritatis repellat doloribus corrupti ab fuga, hic adipisci velit provident, porro
-            beatae assumenda? Illum.
-            Tenetur aperiam, maiores, illum doloremque incidunt aspernatur odio harum, eum natus aliquam nobis eligendi
-            placeat enim. Officiis ducimus quaerat nam odio fugiat delectus enim, dolorum quam omnis harum nesciunt
-            sapiente?
-            Ducimus corrupti voluptatem adipisci delectus sequi fuga, sed inventore aperiam animi commodi alias
-            assumenda nobis corporis esse temporibus ad quae minima! Nemo culpa illo neque iste incidunt quas ea
-            tempora.
-            Laudantium cum a ea quis accusamus libero, id molestias vero cumque reiciendis labore aliquid eum ullam esse
-            assumenda corporis quo fugiat recusandae eligendi dolorum debitis ad obcaecati accusantium ipsa. Deleniti!
-            Quia officia modi omnis beatae aut, architecto minus. Accusamus iure soluta similique? Omnis, at. Quibusdam
-            veritatis saepe adipisci nemo voluptatibus quisquam in, eveniet sit consequatur pariatur laudantium quae
-            voluptatem autem!
-            Totam nulla inventore iusto aperiam velit et fugiat adipisci? Sint accusamus sed ullam, quis iste laborum
-            atque a voluptas deserunt, neque inventore labore at ipsum aperiam magni porro earum magnam.
-            Mollitia sequi provident corporis eveniet beatae dolor hic magni illum eaque pariatur, quod sunt voluptate
-            enim voluptatibus debitis voluptas eos dolore qui nisi numquam placeat ducimus suscipit nesciunt! Atque,
-            dignissimos!
-            Aut mollitia explicabo officiis, omnis asperiores fugit, corrupti ratione et deserunt aliquid consequatur
-            quidem a ipsa corporis facere voluptates doloremque magnam odit neque debitis tempora eveniet. Nobis officia
-            obcaecati laudantium?
+          <h1>Mitologia Nórdica:</h1>
+          <p>A <strong>mitologia nórdica</strong>, viking ou germânica, possui mais de um nome por ser uma crença de vários povos, foi
+            desenvolvida nos países escandinavos ou nórdicos, como as atuais Suécia, Noruega, Finlândia, Islândia e
+            Dinamarca. Assim como a maioria das mitologias teve grande influência na configuração cultural desses povos e
+            até hoje inspira filmes, quadrinhos, séries e etc.
+            Constituída de deuses, heróis, anões, gigantes, serpentes, lobos e feiticeiros, as lendas relatam
+            acontecimentos que procuram explicar a origem da humanidade, a vida após a morte, fenômenos da natureza,
+            dentre outros.
+          </p>
         </div>
         <div class="col">
             3 of 3
